rectified error in index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,7 +5,7 @@
 
     <h1>welcome to smartnotes</h1>
     <p>{{today}}</p>
-    <a href="{% url '' %}" class="btn btn-primary">Check Out SmartNotes!</a>
+    <div class="btn btn-primary">Check Out SmartNotes!</div>
 
     <h2 class="my-5">How to use the app</h2>
     {% include "home/info.html" %}
