--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -12,6 +12,11 @@
 <body>
 
     <nav class="navbar navbar-dark bg-dark">
+        {% if user.is_authenticated %}
+            <p style="color: white;">Welcome, {{ user.username }}!</p>
+        {% else %}
+            <p style="color: white;"">Welcome, guest! Please <a href="{% url 'login' %}">login</a>.</p>
+        {% endif %}
         <div class="ms-auto">
             {% if user.is_authenticated %}
                 <a href="{% url 'home' %}" class="btn btn-outline-light me-1 ">Home</a>
